--- a/design/sass/modules/_category-links.scss
+++ b/design/sass/modules/_category-links.scss
@@ -1,6 +1,7 @@
 .catlinks {
   background-color: $gray;
   border-radius: 3px;
+  clear: both;
   margin-top: 40px;
   padding: 10px 15px;
 
