--- a/design/sass/modules/_main-content.scss
+++ b/design/sass/modules/_main-content.scss
@@ -7,6 +7,15 @@
   padding-top: 10px;
   position: relative;
   z-index: 100;
+
+  &:before,
+  &:after {
+    content: " "; // 1
+    display: table; // 2
+  }
+  &:after {
+    clear: both;
+  }
 }
 .main-content {
 
@@ -71,5 +80,4 @@
     max-width: 100%;
     height: 100%;
   }
-
 }
